FINAL/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CONTINUE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM id BEGIN pgm_body END
Rule 2     id -> IDENTIFIER
Rule 3     pgm_body -> decl func_declarations
Rule 4     decl -> string_decl decl
Rule 5     decl -> var_decl decl
Rule 6     decl -> empty
Rule 7     string_decl -> STRING id EQ_EQ str SEMI
Rule 8     str -> STRINGLITERAL
Rule 9     var_decl -> var_type id_list SEMI
Rule 10    var_type -> FLOAT
Rule 11    var_type -> INT
Rule 12    any_type -> var_type
Rule 13    any_type -> VOID
Rule 14    id_list -> id id_tail
Rule 15    id_tail -> COMM id id_tail
Rule 16    id_tail -> empty
Rule 17    param_decl_list -> param_decl param_decl_tail
Rule 18    param_decl_list -> empty
Rule 19    param_decl -> var_type id
Rule 20    param_decl_tail -> COMM param_decl param_decl_tail
Rule 21    param_decl_tail -> empty
Rule 22    func_declarations -> func_decl func_declarations
Rule 23    func_declarations -> empty
Rule 24    func_decl -> s_func L_PAR param_decl_list R_PAR BEGIN func_body END
Rule 25    s_func -> FUNCTION any_type id
Rule 26    func_body -> decl stmt_list
Rule 27    stmt_list -> stmt stmt_list
Rule 28    stmt_list -> empty
Rule 29    stmt -> base_stmt
Rule 30    stmt -> if_stmt
Rule 31    stmt -> while_stmt
Rule 32    base_stmt -> assign_stmt
Rule 33    base_stmt -> read_stmt
Rule 34    base_stmt -> write_stmt
Rule 35    base_stmt -> return_stmt
Rule 36    assign_stmt -> assign_expr SEMI
Rule 37    assign_expr -> id EQ_EQ expr
Rule 38    read_stmt -> READ L_PAR id_list R_PAR SEMI
Rule 39    write_stmt -> WRITE L_PAR id_list R_PAR SEMI
Rule 40    return_stmt -> RETURN expr SEMI
Rule 41    expr -> expr_prefix factor
Rule 42    expr_prefix -> expr_prefix factor addop
Rule 43    expr_prefix -> empty
Rule 44    factor -> factor_prefix postfix_expr
Rule 45    factor_prefix -> factor_prefix postfix_expr mulop
Rule 46    factor_prefix -> empty
Rule 47    postfix_expr -> primary
Rule 48    postfix_expr -> call_expr
Rule 49    call_expr -> id L_PAR expr_list R_PAR
Rule 50    expr_list -> expr expr_list_tail
Rule 51    expr_list -> empty
Rule 52    expr_list_tail -> COMM expr expr_list_tail
Rule 53    expr_list_tail -> empty
Rule 54    primary -> L_PAR expr R_PAR
Rule 55    primary -> id
Rule 56    primary -> INTLITERAL
Rule 57    primary -> FLOATLITERAL
Rule 58    addop -> PLUS
Rule 59    addop -> MINUS
Rule 60    mulop -> MULT
Rule 61    mulop -> DIV
Rule 62    if_stmt -> s_if L_PAR cond R_PAR decl stmt_list else_part ENDIF
Rule 63    s_if -> IF
Rule 64    else_part -> s_else decl stmt_list
Rule 65    else_part -> empty
Rule 66    s_else -> ELSE
Rule 67    cond -> expr compop expr
Rule 68    compop -> LESS
Rule 69    compop -> MORE
Rule 70    compop -> EQ
Rule 71    compop -> N_EQ
Rule 72    compop -> L_EQ
Rule 73    compop -> R_EQ
Rule 74    while_stmt -> s_while L_PAR cond R_PAR decl stmt_list ENDWHILE
Rule 75    s_while -> WHILE
Rule 76    empty -> <empty>

Terminals, with rules where they appear

BEGIN                : 1 24
BREAK                : 
COMM                 : 15 20 52
COMMENT              : 
CONTINUE             : 
DIV                  : 61
ELSE                 : 66
END                  : 1 24
ENDIF                : 62
ENDWHILE             : 74
EQ                   : 70
EQ_EQ                : 7 37
FLOAT                : 10
FLOATLITERAL         : 57
FUNCTION             : 25
IDENTIFIER           : 2
IF                   : 63
INT                  : 11
INTLITERAL           : 56
LESS                 : 68
L_EQ                 : 72
L_PAR                : 24 38 39 49 54 62 74
MINUS                : 59
MORE                 : 69
MULT                 : 60
N_EQ                 : 71
PLUS                 : 58
PROGRAM              : 1
READ                 : 38
RETURN               : 40
R_EQ                 : 73
R_PAR                : 24 38 39 49 54 62 74
SEMI                 : 7 9 36 38 39 40
STRING               : 7
STRINGLITERAL        : 8
VOID                 : 13
WHILE                : 75
WRITE                : 39
error                : 

Nonterminals, with rules where they appear

addop                : 42
any_type             : 25
assign_expr          : 36
assign_stmt          : 32
base_stmt            : 29
call_expr            : 48
compop               : 67
cond                 : 62 74
decl                 : 3 4 5 26 62 64 74
else_part            : 62
empty                : 6 16 18 21 23 28 43 46 51 53 65
expr                 : 37 40 50 52 54 67 67
expr_list            : 49
expr_list_tail       : 50 52
expr_prefix          : 41 42
factor               : 41 42
factor_prefix        : 44 45
func_body            : 24
func_decl            : 22
func_declarations    : 3 22
id                   : 1 7 14 15 19 25 37 49 55
id_list              : 9 38 39
id_tail              : 14 15
if_stmt              : 30
mulop                : 45
param_decl           : 17 20
param_decl_list      : 24
param_decl_tail      : 17 20
pgm_body             : 1
postfix_expr         : 44 45
primary              : 47
program              : 0
read_stmt            : 33
return_stmt          : 35
s_else               : 64
s_func               : 24
s_if                 : 62
s_while              : 74
stmt                 : 27
stmt_list            : 26 27 62 64 74
str                  : 7
string_decl          : 4
var_decl             : 5
var_type             : 9 12 19
while_stmt           : 31
write_stmt           : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM id BEGIN pgm_body END

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . id BEGIN pgm_body END
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 3

state 2

    (0) S' -> program .



state 3

    (1) program -> PROGRAM id . BEGIN pgm_body END

    BEGIN           shift and go to state 5


state 4

    (2) id -> IDENTIFIER .

    COMM            reduce using rule 2 (id -> IDENTIFIER .)
    R_PAR           reduce using rule 2 (id -> IDENTIFIER .)
    EQ_EQ           reduce using rule 2 (id -> IDENTIFIER .)
    SEMI            reduce using rule 2 (id -> IDENTIFIER .)
    BEGIN           reduce using rule 2 (id -> IDENTIFIER .)
    L_PAR           reduce using rule 2 (id -> IDENTIFIER .)
    MULT            reduce using rule 2 (id -> IDENTIFIER .)
    DIV             reduce using rule 2 (id -> IDENTIFIER .)
    PLUS            reduce using rule 2 (id -> IDENTIFIER .)
    MINUS           reduce using rule 2 (id -> IDENTIFIER .)
    LESS            reduce using rule 2 (id -> IDENTIFIER .)
    MORE            reduce using rule 2 (id -> IDENTIFIER .)
    EQ              reduce using rule 2 (id -> IDENTIFIER .)
    N_EQ            reduce using rule 2 (id -> IDENTIFIER .)
    L_EQ            reduce using rule 2 (id -> IDENTIFIER .)
    R_EQ            reduce using rule 2 (id -> IDENTIFIER .)


state 5

    (1) program -> PROGRAM id BEGIN . pgm_body END
    (3) pgm_body -> . decl func_declarations
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id EQ_EQ str SEMI
    (9) var_decl -> . var_type id_list SEMI
    (76) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 11
    FUNCTION        reduce using rule 76 (empty -> .)
    END             reduce using rule 76 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    var_decl                       shift and go to state 7
    string_decl                    shift and go to state 12
    decl                           shift and go to state 8
    pgm_body                       shift and go to state 13
    empty                          shift and go to state 14
    var_type                       shift and go to state 10

state 6

    (11) var_type -> INT .

    IDENTIFIER      reduce using rule 11 (var_type -> INT .)


state 7

    (5) decl -> var_decl . decl
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id EQ_EQ str SEMI
    (9) var_decl -> . var_type id_list SEMI
    (76) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 11
    FUNCTION        reduce using rule 76 (empty -> .)
    END             reduce using rule 76 (empty -> .)
    READ            reduce using rule 76 (empty -> .)
    WRITE           reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    WHILE           reduce using rule 76 (empty -> .)
    IDENTIFIER      reduce using rule 76 (empty -> .)
    ELSE            reduce using rule 76 (empty -> .)
    ENDIF           reduce using rule 76 (empty -> .)
    ENDWHILE        reduce using rule 76 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    var_decl                       shift and go to state 7
    string_decl                    shift and go to state 12
    decl                           shift and go to state 15
    empty                          shift and go to state 14
    var_type                       shift and go to state 10

state 8

    (3) pgm_body -> decl . func_declarations
    (22) func_declarations -> . func_decl func_declarations
    (23) func_declarations -> . empty
    (24) func_decl -> . s_func L_PAR param_decl_list R_PAR BEGIN func_body END
    (76) empty -> .
    (25) s_func -> . FUNCTION any_type id

    END             reduce using rule 76 (empty -> .)
    FUNCTION        shift and go to state 18

    func_declarations              shift and go to state 19
    empty                          shift and go to state 20
    func_decl                      shift and go to state 17
    s_func                         shift and go to state 16

state 9

    (10) var_type -> FLOAT .

    IDENTIFIER      reduce using rule 10 (var_type -> FLOAT .)


state 10

    (9) var_decl -> var_type . id_list SEMI
    (14) id_list -> . id id_tail
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 21
    id_list                        shift and go to state 22

state 11

    (7) string_decl -> STRING . id EQ_EQ str SEMI
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 23

state 12

    (4) decl -> string_decl . decl
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id EQ_EQ str SEMI
    (9) var_decl -> . var_type id_list SEMI
    (76) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 11
    FUNCTION        reduce using rule 76 (empty -> .)
    END             reduce using rule 76 (empty -> .)
    READ            reduce using rule 76 (empty -> .)
    WRITE           reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    WHILE           reduce using rule 76 (empty -> .)
    IDENTIFIER      reduce using rule 76 (empty -> .)
    ELSE            reduce using rule 76 (empty -> .)
    ENDIF           reduce using rule 76 (empty -> .)
    ENDWHILE        reduce using rule 76 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    string_decl                    shift and go to state 12
    var_decl                       shift and go to state 7
    decl                           shift and go to state 24
    empty                          shift and go to state 14
    var_type                       shift and go to state 10

state 13

    (1) program -> PROGRAM id BEGIN pgm_body . END

    END             shift and go to state 25


state 14

    (6) decl -> empty .

    FUNCTION        reduce using rule 6 (decl -> empty .)
    END             reduce using rule 6 (decl -> empty .)
    READ            reduce using rule 6 (decl -> empty .)
    WRITE           reduce using rule 6 (decl -> empty .)
    RETURN          reduce using rule 6 (decl -> empty .)
    IF              reduce using rule 6 (decl -> empty .)
    WHILE           reduce using rule 6 (decl -> empty .)
    IDENTIFIER      reduce using rule 6 (decl -> empty .)
    ELSE            reduce using rule 6 (decl -> empty .)
    ENDIF           reduce using rule 6 (decl -> empty .)
    ENDWHILE        reduce using rule 6 (decl -> empty .)


state 15

    (5) decl -> var_decl decl .

    FUNCTION        reduce using rule 5 (decl -> var_decl decl .)
    END             reduce using rule 5 (decl -> var_decl decl .)
    READ            reduce using rule 5 (decl -> var_decl decl .)
    WRITE           reduce using rule 5 (decl -> var_decl decl .)
    RETURN          reduce using rule 5 (decl -> var_decl decl .)
    IF              reduce using rule 5 (decl -> var_decl decl .)
    WHILE           reduce using rule 5 (decl -> var_decl decl .)
    IDENTIFIER      reduce using rule 5 (decl -> var_decl decl .)
    ELSE            reduce using rule 5 (decl -> var_decl decl .)
    ENDIF           reduce using rule 5 (decl -> var_decl decl .)
    ENDWHILE        reduce using rule 5 (decl -> var_decl decl .)


state 16

    (24) func_decl -> s_func . L_PAR param_decl_list R_PAR BEGIN func_body END

    L_PAR           shift and go to state 26


state 17

    (22) func_declarations -> func_decl . func_declarations
    (22) func_declarations -> . func_decl func_declarations
    (23) func_declarations -> . empty
    (24) func_decl -> . s_func L_PAR param_decl_list R_PAR BEGIN func_body END
    (76) empty -> .
    (25) s_func -> . FUNCTION any_type id

    END             reduce using rule 76 (empty -> .)
    FUNCTION        shift and go to state 18

    func_declarations              shift and go to state 27
    empty                          shift and go to state 20
    func_decl                      shift and go to state 17
    s_func                         shift and go to state 16

state 18

    (25) s_func -> FUNCTION . any_type id
    (12) any_type -> . var_type
    (13) any_type -> . VOID
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    VOID            shift and go to state 28
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    any_type                       shift and go to state 29
    var_type                       shift and go to state 30

state 19

    (3) pgm_body -> decl func_declarations .

    END             reduce using rule 3 (pgm_body -> decl func_declarations .)


state 20

    (23) func_declarations -> empty .

    END             reduce using rule 23 (func_declarations -> empty .)


state 21

    (14) id_list -> id . id_tail
    (15) id_tail -> . COMM id id_tail
    (16) id_tail -> . empty
    (76) empty -> .

    COMM            shift and go to state 33
    SEMI            reduce using rule 76 (empty -> .)
    R_PAR           reduce using rule 76 (empty -> .)

    id_tail                        shift and go to state 31
    empty                          shift and go to state 32

state 22

    (9) var_decl -> var_type id_list . SEMI

    SEMI            shift and go to state 34


state 23

    (7) string_decl -> STRING id . EQ_EQ str SEMI

    EQ_EQ           shift and go to state 35


state 24

    (4) decl -> string_decl decl .

    FUNCTION        reduce using rule 4 (decl -> string_decl decl .)
    END             reduce using rule 4 (decl -> string_decl decl .)
    READ            reduce using rule 4 (decl -> string_decl decl .)
    WRITE           reduce using rule 4 (decl -> string_decl decl .)
    RETURN          reduce using rule 4 (decl -> string_decl decl .)
    IF              reduce using rule 4 (decl -> string_decl decl .)
    WHILE           reduce using rule 4 (decl -> string_decl decl .)
    IDENTIFIER      reduce using rule 4 (decl -> string_decl decl .)
    ELSE            reduce using rule 4 (decl -> string_decl decl .)
    ENDIF           reduce using rule 4 (decl -> string_decl decl .)
    ENDWHILE        reduce using rule 4 (decl -> string_decl decl .)


state 25

    (1) program -> PROGRAM id BEGIN pgm_body END .

    $end            reduce using rule 1 (program -> PROGRAM id BEGIN pgm_body END .)


state 26

    (24) func_decl -> s_func L_PAR . param_decl_list R_PAR BEGIN func_body END
    (17) param_decl_list -> . param_decl param_decl_tail
    (18) param_decl_list -> . empty
    (19) param_decl -> . var_type id
    (76) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    R_PAR           reduce using rule 76 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    param_decl_list                shift and go to state 38
    param_decl                     shift and go to state 36
    var_type                       shift and go to state 37
    empty                          shift and go to state 39

state 27

    (22) func_declarations -> func_decl func_declarations .

    END             reduce using rule 22 (func_declarations -> func_decl func_declarations .)


state 28

    (13) any_type -> VOID .

    IDENTIFIER      reduce using rule 13 (any_type -> VOID .)


state 29

    (25) s_func -> FUNCTION any_type . id
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 40

state 30

    (12) any_type -> var_type .

    IDENTIFIER      reduce using rule 12 (any_type -> var_type .)


state 31

    (14) id_list -> id id_tail .

    R_PAR           reduce using rule 14 (id_list -> id id_tail .)
    SEMI            reduce using rule 14 (id_list -> id id_tail .)


state 32

    (16) id_tail -> empty .

    SEMI            reduce using rule 16 (id_tail -> empty .)
    R_PAR           reduce using rule 16 (id_tail -> empty .)


state 33

    (15) id_tail -> COMM . id id_tail
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 41

state 34

    (9) var_decl -> var_type id_list SEMI .

    STRING          reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    FLOAT           reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    INT             reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    READ            reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    WRITE           reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    RETURN          reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    IF              reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    WHILE           reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    IDENTIFIER      reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    ENDIF           reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    FUNCTION        reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    END             reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    ELSE            reduce using rule 9 (var_decl -> var_type id_list SEMI .)
    ENDWHILE        reduce using rule 9 (var_decl -> var_type id_list SEMI .)


state 35

    (7) string_decl -> STRING id EQ_EQ . str SEMI
    (8) str -> . STRINGLITERAL

    STRINGLITERAL   shift and go to state 42

    str                            shift and go to state 43

state 36

    (17) param_decl_list -> param_decl . param_decl_tail
    (20) param_decl_tail -> . COMM param_decl param_decl_tail
    (21) param_decl_tail -> . empty
    (76) empty -> .

    COMM            shift and go to state 44
    R_PAR           reduce using rule 76 (empty -> .)

    param_decl_tail                shift and go to state 45
    empty                          shift and go to state 46

state 37

    (19) param_decl -> var_type . id
    (2) id -> . IDENTIFIER

    IDENTIFIER      shift and go to state 4

    id                             shift and go to state 47

state 38

    (24) func_decl -> s_func L_PAR param_decl_list . R_PAR BEGIN func_body END

    R_PAR           shift and go to state 48


state 39

    (18) param_decl_list -> empty .

    R_PAR           reduce using rule 18 (param_decl_list -> empty .)


state 40

    (25) s_func -> FUNCTION any_type id .

    L_PAR           reduce using rule 25 (s_func -> FUNCTION any_type id .)


state 41

    (15) id_tail -> COMM id . id_tail
    (15) id_tail -> . COMM id id_tail
    (16) id_tail -> . empty
    (76) empty -> .

    COMM            shift and go to state 33
    SEMI            reduce using rule 76 (empty -> .)
    R_PAR           reduce using rule 76 (empty -> .)

    id_tail                        shift and go to state 49
    empty                          shift and go to state 32

state 42

    (8) str -> STRINGLITERAL .

    SEMI            reduce using rule 8 (str -> STRINGLITERAL .)


state 43

    (7) string_decl -> STRING id EQ_EQ str . SEMI

    SEMI            shift and go to state 50


state 44

    (20) param_decl_tail -> COMM . param_decl param_decl_tail
    (19) param_decl -> . var_type id
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    param_decl                     shift and go to state 51
    var_type                       shift and go to state 37

state 45

    (17) param_decl_list -> param_decl param_decl_tail .

    R_PAR           reduce using rule 17 (param_decl_list -> param_decl param_decl_tail .)


state 46

    (21) param_decl_tail -> empty .

    R_PAR           reduce using rule 21 (param_decl_tail -> empty .)


state 47

    (19) param_decl -> var_type id .

    COMM            reduce using rule 19 (param_decl -> var_type id .)
    R_PAR           reduce using rule 19 (param_decl -> var_type id .)


state 48

    (24) func_decl -> s_func L_PAR param_decl_list R_PAR . BEGIN func_body END

    BEGIN           shift and go to state 52


state 49

    (15) id_tail -> COMM id id_tail .

    SEMI            reduce using rule 15 (id_tail -> COMM id id_tail .)
    R_PAR           reduce using rule 15 (id_tail -> COMM id id_tail .)


state 50

    (7) string_decl -> STRING id EQ_EQ str SEMI .

    STRING          reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    FLOAT           reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    INT             reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    FUNCTION        reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    END             reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    READ            reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    WRITE           reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    RETURN          reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    IF              reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    WHILE           reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    IDENTIFIER      reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    ELSE            reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    ENDIF           reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)
    ENDWHILE        reduce using rule 7 (string_decl -> STRING id EQ_EQ str SEMI .)


state 51

    (20) param_decl_tail -> COMM param_decl . param_decl_tail
    (20) param_decl_tail -> . COMM param_decl param_decl_tail
    (21) param_decl_tail -> . empty
    (76) empty -> .

    COMM            shift and go to state 44
    R_PAR           reduce using rule 76 (empty -> .)

    param_decl_tail                shift and go to state 53
    empty                          shift and go to state 46

state 52

    (24) func_decl -> s_func L_PAR param_decl_list R_PAR BEGIN . func_body END
    (26) func_body -> . decl stmt_list
    (4) decl -> . string_decl decl
    (5) decl -> . var_decl decl
    (6) decl -> . empty
    (7) string_decl -> . STRING id EQ_EQ str SEMI
    (9) var_decl -> . var_type id_list SEMI
    (76) empty -> .
    (10) var_type -> . FLOAT
    (11) var_type -> . INT

    STRING          shift and go to state 11
    READ            reduce using rule 76 (empty -> .)
    WRITE           reduce using rule 76 (empty -> .)
    RETURN          reduce using rule 76 (empty -> .)
    IF              reduce using rule 76 (empty -> .)
    WHILE           reduce using rule 76 (empty -> .)
    IDENTIFIER      reduce using rule 76 (empty -> .)
    END             reduce using rule 76 (empty -> .)
    FLOAT           shift and go to state 9
    INT             shift and go to state 6

    string_decl                    shift and go to state 12
    decl                           shift and go to state 54
    var_type                       shift and go to state 10
    var_decl                       shift and go to state 7
    func_body                      shift and go to state 55
    empty                          shift and go to state 14

state 53

    (20) param_decl_tail -> COMM param_decl param_decl_tail .

    R_PAR           reduce using rule 20 (param_decl_tail -> COMM param_decl param_decl_tail .)


state 54

    (26) func_body -> decl . stmt_list
    (27) stmt_list -> . stmt stmt_list
    (28) stmt_list -> . empty
    (29) stmt -> . base_stmt
    (30) stmt -> . if_stmt
    (31) stmt -> . while_stmt
    (76) empty -> .
    (32) base_stmt -> . assign_stmt
    (33) base_stmt -> . read_stmt
    (34) base_stmt -> . write_stmt
    (35) base_stmt -> . return_stmt
    (62) if_stmt -> . s_if L_PAR cond R_PAR decl stmt_list else_part ENDIF
    (74) while_stmt -> . s_while L_PAR cond R_PAR decl stmt_list ENDWHILE
    (36) assign_stmt -> . assign_expr SEMI
    (38) read_stmt -> . READ L_PAR id_list R_PAR SEMI
    (39) write_stmt -> . WRITE L_PAR id_list R_PAR SEMI
    (40) return_stmt -> . RETURN expr SEMI
    (63) s_if -> . IF
    (75) s_while -> . WHILE
    (37) assign_expr -> . id EQ_EQ expr
    (2) id -> . IDENTIFIER

    END             reduce using rule 76 (empty -> .)
    READ            shift and go to state 70
    WRITE           shift and go to state 63
    RETURN          shift and go to state 69
    IF              shift and go to state 65
    WHILE           shift and go to state 68
    IDENTIFIER      shift and go to state 4

    if_stmt                        shift and go to state 56
    while_stmt                     shift and go to state 57
    write_stmt                     shift and go to state 58
    stmt                           shift and go to state 59
    stmt_list                      shift and go to state 60
    s_while                        shift and go to state 66
    base_stmt                      shift and go to state 67
    s_if                           shift and go to state 61
    assign_expr                    shift and go to state 72
    return_stmt                    shift and go to state 71
    id                             shift and go to state 62
    empty                          shift and go to state 64
    read_stmt                      shift and go to state 73
    assign_stmt                    shift and go to state 74

state 55

    (24) func_decl -> s_func L_PAR param_decl_list R_PAR BEGIN func_body . END

    END             shift and go to state 75


state 56

    (30) stmt -> if_stmt .
